--- a/.npmignore
+++ b/.npmignore
@@ -16,6 +16,10 @@ demo-build
 webpack.config.js
 
 #typescript sources
-
+*.ts
+*.js.map
+!*.d.ts
+/components/**/*.ts
+!/components/**/*.d.ts
 
 factories
